# http-rest-api

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  aa_compose_down.sh  build.sh  build_dockerfile.sh  config.cpp  config.json  docker-compose.yml  main.cpp  old_vcpkg.json  router.cpp  vcpkg_install.sh
.github/workflows/: cmake.yml  docker-image.yml
prom/: prometheus.yml
src/: db.cpp  main.cpp  metric.cpp  queries.cpp  router.cpp
src/migrations/: tables.sql
src/queries/: query.json
test/: http_client.cpp  main.cpp
traefik/: traefik.toml
